		 for the new journal based state engine.
		 New capabilities of the state engine:
		 - RPO=0 in the event of lixad crash, for any reason, but
		   Linux operating system survival (this new behaviour 
		   eliminate most of the un-necessary rollback/commit during
		   the recovery phase and
		   requested by the traditional state server to the 
		   applications due to the lack of the last data)
		 - 2 order of magnitude smaller latency in comparison with the
		   traditional state engine
2019-05-12 1.7.8 Added (client) connection timeout; default value = 5000 ms
		 A new error message (LXC034E) is sent to the syslog in the
		 event that the client doesn't get a reply before timeout
		 expiration. The previous behaviour can be obtained setting a
		 new environment variable:
		 export LIXA_CLIENT_CONNECTION_TIMEOUT=-1
		 A shorter timeout can be set as well:
		 export LIXA_CLIENT_CONNECTION_TIMEOUT=1000
		 In the event of timeout, the socket is immediately closed and
		 it can't re-used to guarantee consistency.
		 New getConnectionTimeout() and setConnectionTimeout() methods.
		 XID serialization for PostgreSQL has been changed from native
		 LIXA (formatID.Hex(gtrid).Hex(bqual)) to the same used by
		 PostgreSQL's JDBC driver (formatID_Base64(gtrid)_Base64(bqual))
		 Fixed some errors in return codes of MySQL and PostgreSQL
		 LIXA adapters.
		 Implemented a workaround to mitigate a MySQL bug that LIXA
		 exploited during autorecovery of prepared transactions
		 https://bugs.mysql.com/bug.php?id=87836
		 Introduced method TransactionManager.delete() in XTA for Java
		 to force TCP/IP socket close before Java garbage collection
		 execution.
		 Fixed a bug in XTA: the client TCP connection was not
		 explicitly closed by xta_transaction_delete.

2019-04-07 1.7.7 Documentation fix

2019-03-22 1.7.6 Fixed a bug related to xta_transaction_start() issued multiple
		 times on an object used for multiple branches transaction.